src/styles/components/_mobileNavbar.scss
@import "../variables";

.mobile-navbar-container {
  position: fixed;
  z-index: 40;
  width: 100vw;
  height: 10vh;
  color: $backgroun_color2;
  font-size: 30px;
  background-color: rgba($color: #000000, $alpha: 0.2);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.mobile-navbar-logo-container {
  margin-left: 2%;
  height: 65%;

  img {
    width: 100%;
    //object-fit: cover;
    height: calc(100% - 35px);
    opacity: 0.7;
  }
}

